--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: docker build --build-arg ENV=development -t mustafaeligere/dockersample:latest .
       - run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
-      - run: docker push docker push mustafaeligere/dockersample:latest
+      - run: docker push mustafaeligere/dockersample:latest
